Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.7.6: Nov 30th, 2011

* pplugincache now removes old caches when ran.

* pkgcore now honors layout.conf masters for eclass stacking.

* pplugincache now forces an update, regardless of mtimes involved.

* pkgcore internal configuration was rewritten to be stricter, while
  allowing far more overriding.  In general, it should now do what
  you would expect.  Exact details, see the git logs.

* plugin cache format is now v3; this improves performance primarily.


pkgcore 0.7.5: Nov 7th, 2011

* pkgcore now extends masking rules to binpkg repositories; in addition,
  it now honors 'masters' for masking.  This means repositories that
  try to suppress an inherited mask that affects that repo, can now
  do so.

* fix bug- export ROOT to pkg_pretend invocations.

* pkgcore no longer export PWORKDIR; this was in use via extremely old
  libtool versions as a way to do QA; no longer needed.

* match multirepo portage behaviour; specifically, no longer force overlay
  version shadowing.


pkgcore 0.7.4: Oct 27th, 2011

* fix userprofile stacking for /etc/portage/profile; this fixes a traceback.


pkgcore 0.7.3: Oct 26th, 2011

* speed up directory walking; varies, but ~25% faster.

* pkgcore no longer allows comments in profiles/categories.

* pkgcore now allows profile package.mask and friends as directories for user
  configuration, and within repositories that set profile-formats = portage-1
  in their layout.conf.

* pquery --expr was removed.  Open to re-adding it, but in a maintainable
  form that has testing, and is usable elsewhere.

* pquery now if given no restrictions, defaults to --all.

* pquery argument parsing was rewritten; ordering issues for --config
  were fixed, error messages improved, and general cleanup.

* fix traceback that occurs when unmerging a pkg, but tempspace needs
  to be created.
