@@ -4,6 +4,10 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* fix portage_config generation bug in 0.7.6; in the process, forced
+  overlay's eclass stacking onto PORTDIR is no longer done by default.
+
+
 pkgcore 0.7.6: Nov 30th, 2011
 
 * pplugincache now removes old caches when ran.
